fix spacing for print

--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -1,3 +1,7 @@
 .para {
     background: #000;
 }
+
+.game-card {
+    height: 511px;
+}
